force-app/main/default/objects/Closing_Copy__c/Closing_Copy__c.object-meta.xml
<CustomObject>
    <label>Closing Copy</label>
    <nameField>
        <label>Closing Copy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Closings Copy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>