force-app/main/default/objects/Closing_Copy__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Closings_Copy</relationshipName>
    <type>Lookup</type>
</CustomField>