force-app/main/default/objects/Closing_Copy__c/fields/Closing_Original__c.field-meta.xml
<CustomField>
    <fullName>Closing_Original__c</fullName>
    <label>Closing (Original)</label>
    <referenceTo>pba__Closing__c</referenceTo>
    <relationshipLabel>Closings Copy</relationshipLabel>
    <relationshipName>Closings_Copy</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>